<resources>
    <string name="app_name">fitness tracker</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="go_to_registration">Зарегистрироваться</string>
    <string name="go_to_login">Уже есть аккаунт?</string>
    <string name="welcome_screen_title">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcome_screen_under_title">Созданный студентами</string>
    <string name="name">Имя или никнейм</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="sex">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="other">Другое</string>
    <string name="alert">Нажимая на кнопку, вы соглашаетесь с <a href="https://www.google.com/">политикой конфиденциальности</a> и обработкой персональных данных, а также принимаете <a href="https://www.google.com/">пользовательское соглашение</a></string>
    <string name="enter">Вход</string>
    <string name="enterButton">Войти</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="mine">Моя</string>
    <string name="users">Пользователей</string>
    <string name="start">Старт</string>
    <string name="comment">Комментарий</string>
    <string name="finish">Финиш</string>
    <string name="save">Сохранить</string>
    <string name="nickname">Имя или никнейм</string>
    <string name="changePassword">Изменить пароль</string>
    <string name="logout">Выйти</string>
    <string name="oldPassword">Старый пароль</string>
    <string name="newPassword">Новый пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="apply">Принять</string>
    <string name="begin">Начать</string>
    <string name="time_to_train">Время потренить</string>
</resources>