<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_registration_bicycles"
        app:layout_constraintBottom_toBottomOf="@id/guideLine1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen_title"

        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="30dp"

        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/under_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen_under_title"

        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegistration"
        android:text="@string/go_to_registration"
        style="@style/default_button"
        android:layout_marginTop="30dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/under_title"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:text="@string/go_to_login"
        style="@style/default_button"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegistration"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>