<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"

        app:layout_constraintBottom_toBottomOf="@id/guideLine1"
        app:icon="@drawable/arrow_back"
        app:iconTint="@color/purple_700"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:src="@drawable/ic_registration_bicycles"
        app:layout_constraintTop_toBottomOf="@id/guideLine1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintLeft_toRightOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/loginInputLayout"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegistration"
        style="@style/default_button"
        android:layout_width="match_parent"
        android:text="@string/enterButton"
        android:layout_margin="20dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>